feat: all resources now controlled by SST

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,14 @@ NODE_ENV=
 # Cloudflare
 CLOUDFLARE_API_TOKEN=
 # Turso
-TURSO_ORG_NAME=
+TURSO_ORG=
 TURSO_API_KEY=
 # Upstash
 UPSTASH_EMAIL=
 UPSTASH_API_KEY=
+# Stripe
+STRIPE_API_KEY=
+# Sentry
+SENTRY_ORG=
+SENTRY_TEAM=
+SENTRY_TOKEN=
