--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -11,10 +11,14 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-  TURSO_ORG_NAME: ${{ secrets.TURSO_ORG_NAME }}
+  TURSO_ORG: ${{ vars.TURSO_ORG }}
   TURSO_API_KEY: ${{ secrets.TURSO_API_KEY }}
-  UPSTASH_EMAIL: ${{ secrets.UPSTASH_EMAIL }}
+  UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
   UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
+  STRIPE_API_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+  SENTRY_ORG: ${{ vars.SENTRY_ORG }}
+  SENTRY_TEAM: ${{ vars.SENTRY_TEAM }}
+  SENTRY_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
 jobs:
   remove:
