ci: add sst refresh to standard action

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -50,3 +50,8 @@ runs:
       shell: bash
       run: |
         bun sst install
+
+    - name: Refresh SST Resources
+      shell: bash
+      run: |
+        bun sst refresh
