--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -36,7 +36,7 @@ runs:
     - name: Cache Docker Buildx from SST
       uses: actions/cache@v4
       with:
-        path: /tmp/buildx-cache
+        path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-buildx-
