--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -55,3 +55,4 @@ runs:
       shell: bash
       run: |
         bun sst refresh
+      continue-on-error: true # No changes equates to an error, so ignore it
