--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "secret:list": "sst secret list",
     "type-check": "turbo run type-check",
     "test": "vitest run",
-    "upgrade": "bun run scripts upgrade && sst upgrade"
+    "upgrade": "bun run scripts upgrade && sst upgrade",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
     "@types/bun": "^1.1.10",
     "@types/node": "^22.7.4",
     "drizzle-kit": "^0.24.2",
+    "husky": "^9.1.6",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
