--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "type": "module",
   "scripts": {
     "build": "turbo run build",
-    "clean": "turbo run clean",
     "clean-install": "rimraf bun.lockb .sst --glob '**/node_modules' && bun install --no-cache && sst install",
+    "clean": "turbo run clean",
     "db:generate": "sst shell -- drizzle-kit generate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
     "db:seed": "sst shell -- bun run ./tools/scripts/src/index.ts db seed",
     "db:studio": "sst shell -- drizzle-kit studio",
-    "dev": "sst dev",
     "deploy": "sst deploy",
+    "dev": "sst dev",
     "format:check": "biome format .",
     "format": "biome format --write .",
     "lint:fix": "biome lint --write .",
     "lint": "biome lint .",
+    "prepare": "husky",
     "prerelease": "bun run type-check && bun run format && bun run lint:fix",
     "refresh": "sst refresh",
     "remove": "sst remove",
-    "scripts": "sst shell -- bun run ./tools/scripts/src/index.ts",
     "scripts:prod": "sst shell --stage production -- bun run ./tools/scripts/src/index.ts",
-    "secret:set": "sst secret set",
-    "secret:remove": "sst secret remove",
+    "scripts": "sst shell -- bun run ./tools/scripts/src/index.ts",
     "secret:list": "sst secret list",
-    "type-check": "turbo run type-check",
+    "secret:remove": "sst secret remove",
+    "secret:set": "sst secret set",
     "test": "vitest run",
-    "upgrade": "bun run scripts upgrade && sst upgrade",
-    "prepare": "husky"
+    "type-check": "turbo run type-check",
+    "upgrade": "bun run scripts upgrade && sst upgrade"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
@@ -42,10 +42,10 @@
     "vitest": "^2.1.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.658.1",
-    "@aws-sdk/client-ses": "^3.658.1",
-    "@aws-sdk/client-sqs": "^3.658.1",
-    "@aws-sdk/s3-request-presigner": "^3.658.1",
+    "@aws-sdk/client-s3": "^3.662.0",
+    "@aws-sdk/client-ses": "^3.662.0",
+    "@aws-sdk/client-sqs": "^3.662.0",
+    "@aws-sdk/s3-request-presigner": "^3.662.0",
     "@libsql/client": "0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.1",
@@ -55,7 +55,7 @@
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
     "sst": "3.1.51",
-    "stripe": "^16.12.0",
+    "stripe": "^17.0.0",
     "zod": "^3.23.8"
   },
   "packageManager": "bun@1.1.27",
