--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "secret:set": "sst secret set",
     "test": "vitest run",
     "type-check": "turbo run type-check",
-    "upgrade": "bun run scripts upgrade && sst upgrade"
+    "upgrade": "bun run ./tools/scripts/src/index.ts upgrade && sst upgrade"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
@@ -39,7 +39,7 @@
     "rimraf": "^6.0.1",
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.2"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.662.0",
@@ -54,7 +54,7 @@
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
-    "sst": "3.1.51",
+    "sst": "3.1.52",
     "stripe": "^17.0.0",
     "zod": "^3.23.8"
   },
