--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@ai-sdk/solid": "^0.0.49",
-    "@ark-ui/solid": "^4.1.0",
+    "@ark-ui/solid": "^4.2.0",
     "@corvu/drawer": "^0.2.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
@@ -36,8 +36,8 @@
     "@kobalte/core": "^0.13.6",
     "@modular-forms/solid": "^0.23.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/bun": "^8.33.0",
-    "@sentry/solidstart": "^8.33.0",
+    "@sentry/bun": "^8.33.1",
+    "@sentry/solid": "^8.33.1",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
     "@solid-primitives/intersection-observer": "^2.1.6",
