--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "@sentry/vite-plugin": "^2.22.5",
     "@types/bun": "^1.1.10",
     "@types/node": "^22.7.4",
     "drizzle-kit": "^0.24.2",
@@ -42,19 +43,19 @@
     "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.662.0",
+    "@aws-sdk/client-s3": "^3.663.0",
     "@aws-sdk/client-ses": "^3.662.0",
     "@aws-sdk/client-sqs": "^3.662.0",
-    "@aws-sdk/s3-request-presigner": "^3.662.0",
+    "@aws-sdk/s3-request-presigner": "^3.663.0",
     "@libsql/client": "0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.1",
-    "ai": "^3.4.7",
+    "ai": "^3.4.8",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
-    "sst": "3.1.52",
+    "sst": "3.1.54",
     "stripe": "^17.0.0",
     "zod": "^3.23.8"
   },
