--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "@types/aws-lambda": "^8.10.145",
     "@types/bun": "^1.1.10",
-    "@types/node": "^22.7.4",
-    "drizzle-kit": "^0.24.2",
+    "@types/node": "^22.7.5",
+    "drizzle-kit": "^0.25.0",
     "husky": "^9.1.6",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.3",
@@ -42,19 +43,19 @@
     "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.665.0",
-    "@aws-sdk/client-ses": "^3.665.0",
-    "@aws-sdk/client-sqs": "^3.665.0",
-    "@aws-sdk/s3-request-presigner": "^3.665.0",
+    "@aws-sdk/client-s3": "^3.666.0",
+    "@aws-sdk/client-ses": "^3.666.0",
+    "@aws-sdk/client-sqs": "^3.666.0",
+    "@aws-sdk/s3-request-presigner": "^3.666.0",
     "@libsql/client": "0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.2",
     "ai": "^3.4.9",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.34.1",
     "drizzle-zod": "^0.5.1",
-    "lucia": "^3.2.0",
-    "sst": "3.1.64",
+    "lucia": "^3.2.1",
+    "sst": "3.1.67",
     "stripe": "^17.1.0",
     "zod": "^3.23.8"
   },
