fix: tweaks to responses

--- a/package.json
+++ b/package.json
@@ -33,37 +33,34 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
     "@types/aws-lambda": "^8.10.145",
-    "@types/bun": "^1.1.10",
+    "@types/bun": "^1.1.11",
     "@types/node": "^22.7.5",
     "drizzle-kit": "^0.25.0",
     "husky": "^9.1.6",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.3",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.666.0",
-    "@aws-sdk/client-ses": "^3.666.0",
-    "@aws-sdk/client-sqs": "^3.666.0",
-    "@aws-sdk/s3-request-presigner": "^3.666.0",
-    "@libsql/client": "0.14.0",
+    "@aws-sdk/client-s3": "^3.668.0",
+    "@aws-sdk/client-ses": "^3.668.0",
+    "@aws-sdk/client-sqs": "^3.668.0",
+    "@aws-sdk/s3-request-presigner": "^3.668.0",
+    "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.3",
-    "@upstash/redis": "^1.34.2",
+    "@upstash/redis": "^1.34.3",
     "ai": "^3.4.9",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.34.1",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.1",
-    "sst": "3.1.67",
-    "stripe": "^17.1.0",
+    "sst": "3.1.74",
+    "stripe": "^17.2.0",
     "zod": "^3.23.8"
   },
   "packageManager": "bun@1.1.27",
   "workspaces": ["apps/*", "packages/*", "tools/*"],
-  "overrides": {
-    "nitropack": "npm:nitropack-nightly@latest"
-  },
   "trustedDependencies": [
     "@biomejs/biome",
     "@sentry/cli",
