--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "turbo run build",
     "clean-install": "rimraf bun.lockb .sst --glob '**/node_modules' && bun install --no-cache && sst install",
     "clean": "turbo run clean",
+    "cy:open": "sst shell -- cypress open",
     "db:generate": "sst shell -- drizzle-kit generate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
     "db:seed": "sst shell -- bun run ./tools/scripts/src/index.ts db seed",
@@ -26,7 +27,9 @@
     "secret:list": "sst secret list",
     "secret:remove": "sst secret remove",
     "secret:set": "sst secret set",
-    "test": "vitest run",
+    "test:e2e": "sst shell -- cypress run",
+    "test:e2e:prod": "sst shell --stage production -- cypress run",
+    "test": "sst shell -- vitest run",
     "type-check": "turbo run type-check",
     "upgrade": "bun run ./tools/scripts/src/index.ts upgrade && sst upgrade"
   },
@@ -35,6 +38,8 @@
     "@types/aws-lambda": "^8.10.145",
     "@types/bun": "^1.1.11",
     "@types/node": "^22.7.5",
+    "cypress": "^13.15.0",
+    "cypress-wait-until": "^3.0.2",
     "drizzle-kit": "^0.26.2",
     "husky": "^9.1.6",
     "rimraf": "^6.0.1",
@@ -61,11 +66,5 @@
   },
   "packageManager": "bun@1.1.27",
   "workspaces": ["apps/*", "packages/*", "tools/*"],
-  "trustedDependencies": [
-    "@biomejs/biome",
-    "@sentry/cli",
-    "@sentry/profiling-node",
-    "esbuild",
-    "sharp"
-  ]
+  "trustedDependencies": ["@biomejs/biome", "cypress", "esbuild", "sharp"]
 }
