--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tools/tsconfig/tsconfig.json",
-  "include": [".sst/platform/config.d.ts", "**/*.ts", "**/*.tsx", "vitest.workspace.js"],
+  "compilerOptions": {
+    "types": ["cypress", "cypress-wait-until"]
+  },
+  "include": [".sst/platform/config.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "apps", "packages", "tools"]
 }
