--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -58,3 +58,7 @@ jobs:
       - name: Seed DB
         run: |
           bun run db:seed
+
+      - name: Run E2E tests
+        run: |
+          bun run test:e2e
