--- a/.github/workflows/sst-remove.yml
+++ b/.github/workflows/sst-remove.yml
@@ -19,6 +19,9 @@ env:
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
   UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
   STRIPE_API_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+  SENTRY_ORG: ${{ vars.SENTRY_ORG }}
+  SENTRY_TEAM: ${{ vars.SENTRY_TEAM }}
+  SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
 jobs:
   remove:
