--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,6 @@
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@noble/hashes": "^1.5.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@theaistudybible/schemas": "workspace:*",
-    "sentry-integration-libsql-client": "^1.3.0"
+    "@theaistudybible/schemas": "workspace:*"
   }
 }
