--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@biomejs/biome": "^1.9.3",
     "@types/aws-lambda": "^8.10.145",
     "@types/bun": "^1.1.11",
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.7.6",
     "cypress": "^13.15.0",
     "cypress-wait-until": "^3.0.2",
     "drizzle-kit": "^0.26.2",
@@ -55,7 +55,7 @@
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.3",
-    "ai": "^3.4.12",
+    "ai": "^3.4.14",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.35.1",
     "drizzle-zod": "^0.5.1",
@@ -66,5 +66,5 @@
   },
   "packageManager": "bun@1.1.27",
   "workspaces": ["apps/*", "packages/*", "tools/*"],
-  "trustedDependencies": ["@biomejs/biome", "cypress", "esbuild", "sharp"]
+  "trustedDependencies": ["@biomejs/biome", "@sentry/cli", "cypress", "esbuild", "sharp"]
 }
