--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "rimraf": "^6.0.1",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.3",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.678.0",
