fix: remove modelId stuff for now that is causing issues

--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,7 @@
       "**/.turbo",
       "**/.vinxi",
       "**/.output",
+      "**/dist",
       "**/bun.lockb",
       "**/migrations",
       "**/sst-env.d.ts",
