--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -41,6 +41,7 @@
     "@solid-primitives/context": "^0.2.3",
     "@solid-primitives/intersection-observer": "^2.1.6",
     "@solid-primitives/keyed": "^1.2.3",
+    "@solid-primitives/memo": "^1.3.10",
     "@solid-primitives/resize-observer": "^2.0.26",
     "@solid-primitives/share": "^2.0.6",
     "@solid-primitives/storage": "^4.2.1",
