--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -21,8 +21,8 @@
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-safe-area": "^0.6.0",
-    "vite-plugin-cjs-interop": "^2.1.4",
-    "vite-plugin-pwa": "^0.20.5"
+    "vite-plugin-pwa": "^0.20.5",
+    "vinxi": "^0.4.3"
   },
   "dependencies": {
     "@ai-sdk/solid": "^0.0.53",
@@ -68,8 +68,7 @@
     "solid-transition-group": "^0.2.3",
     "tailwind-merge": "^2.5.4",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vinxi": "^0.4.3"
+    "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
     "node": ">=18",
