--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -62,6 +62,7 @@
     "embla-carousel-solid": "^8.3.1",
     "hono": "^4.6.8",
     "lucide-solid": "^0.454.0",
+    "posthog-js": "^1.178.0",
     "solid-js": "^1.9.3",
     "solid-marked": "^0.6.3",
     "solid-sonner": "^0.2.8",
