--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -16,7 +16,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
-  TURSO_ORG_NAME: ${{ vars.TURSO_ORG }}
+  TURSO_ORG: ${{ vars.TURSO_ORG }}
   TURSO_API_KEY: ${{ secrets.TURSO_API_KEY }}
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
   UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
