--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -17,6 +17,9 @@ env:
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
   UPSTASH_API_KEY: ${{ secrets.UPSTASH_API_KEY }}
   STRIPE_API_KEY: ${{ secrets.DEV_STRIPE_SECRET_KEY }}
+  SENTRY_ORG: ${{ vars.SENTRY_ORG }}
+  SENTRY_TEAM: ${{ vars.SENTRY_TEAM }}
+  SENTRY_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
 jobs:
   remove:
