--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@biomejs/biome": "^1.9.4",
     "@types/aws-lambda": "^8.10.145",
     "@types/bun": "^1.1.12",
-    "@types/node": "^22.8.4",
+    "@types/node": "^22.8.5",
     "cypress": "^13.15.1",
     "cypress-wait-until": "^3.0.2",
     "drizzle-kit": "^0.27.0",
@@ -67,5 +67,5 @@
   },
   "packageManager": "bun@1.1.27",
   "workspaces": ["apps/*", "packages/*", "tools/*"],
-  "trustedDependencies": ["@biomejs/biome", "@sentry/cli", "cypress", "esbuild", "sharp"]
+  "trustedDependencies": ["@biomejs/biome", "@sentry/cli", "core-js", "cypress", "esbuild", "sharp"]
 }
