--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -30,9 +30,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 2
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: CI setup
         uses: ./.github/actions/ci-setup
@@ -41,6 +40,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq
+      
+      - name: Set SST Stage
+        run: |
+          echo "pr-${{ github.event.pull_request.number }}" > .sst/stage
 
       - name: Type check
         run: |
@@ -50,9 +53,9 @@ jobs:
         run: |
           bun run lint
 
-      - name: Set SST Stage
+      - name: Test
         run: |
-          echo "pr-${{ github.event.pull_request.number }}" > .sst/stage
+          bun run test
 
       - name: Deploy
         run: |
