--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint:fix": "biome lint --write .",
     "lint": "biome lint .",
     "prepare": "husky",
-    "prerelease": "bun run type-check && bun run format && bun run lint:fix",
+    "prerelease": "bun run type-check && bun run format && bun run lint:fix && bun run build && bun run test",
     "refresh": "sst refresh",
     "remove": "sst remove",
     "scripts:prod": "sst shell --stage production -- bun run ./tools/scripts/src/index.ts",
@@ -37,7 +37,7 @@
     "@biomejs/biome": "^1.9.4",
     "@types/aws-lambda": "^8.10.145",
     "@types/bun": "^1.1.12",
-    "@types/node": "^22.8.5",
+    "@types/node": "^22.8.6",
     "cypress": "^13.15.1",
     "cypress-wait-until": "^3.0.2",
     "drizzle-kit": "^0.27.0",
@@ -56,12 +56,12 @@
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
-    "ai": "^3.4.29",
+    "ai": "^3.4.31",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.2",
-    "sst": "3.2.70",
+    "sst": "3.2.73",
     "stripe": "^17.3.0",
     "zod": "^3.23.8"
   },
