feat: fly.io deployments

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -17,6 +17,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   HCLOUD_TOKEN: ${{ secrets.HCLOUD_TOKEN }}
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   TURSO_ORG: ${{ vars.TURSO_ORG }}
   TURSO_API_KEY: ${{ secrets.TURSO_API_KEY }}
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
