--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@aws-sdk/client-ses": "^3.682.0",
     "@aws-sdk/client-sqs": "^3.682.0",
     "@aws-sdk/s3-request-presigner": "^3.682.0",
+    "@ediri/pulumi-fly": "^0.1.16",
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.4",
     "@upstash/redis": "^1.34.3",
@@ -67,5 +68,13 @@
   },
   "packageManager": "bun@1.1.27",
   "workspaces": ["apps/*", "packages/*", "tools/*"],
-  "trustedDependencies": ["@biomejs/biome", "@sentry/cli", "core-js", "cypress", "esbuild", "sharp"]
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@sentry/cli",
+    "core-js",
+    "cypress",
+    "esbuild",
+    "protobufjs",
+    "sharp"
+  ]
 }
