--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -25,6 +25,11 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "../../packages/core/globals.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "sentry.instrumentation.mjs"
+  ],
   "exclude": ["node_modules", ".output", ".vinxi"]
 }
