--- a/apps/workers/package.json
+++ b/apps/workers/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
     "@theaistudybible/tsconfig": "workspace:*"
+  },
+  "dependencies": {
+    "@sentry/cloudflare": "^8.37.0"
   }
 }
