--- a/apps/workers/tsconfig.json
+++ b/apps/workers/tsconfig.json
@@ -4,8 +4,8 @@
     "target": "ESNext",
     "lib": ["ESNext", "ESNext.AsyncIterable"],
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["@cloudflare/workers-types"],
+    "moduleResolution": "Node",
+    "types": ["@types/node", "@cloudflare/workers-types"],
     "baseUrl": "./",
     "paths": {
       "@/workers": ["./src"],
@@ -24,6 +24,6 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
