--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -27,11 +27,6 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": [
-    "../../packages/core/globals.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "sentry.instrumentation.mjs"
-  ],
+  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx", "instrument.mjs"],
   "exclude": ["node_modules", ".output", ".vinxi"]
 }
