--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -30,6 +30,7 @@
     "@corvu/drawer": "^0.2.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
+    "@formkit/auto-animate": "^0.8.2",
     "@hono/zod-validator": "^0.4.1",
     "@internationalized/date": "^3.5.6",
     "@kobalte/core": "^0.13.7",
