ads: monetag (propeller ads) setup

--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
       "**/bun.lockb",
       "**/migrations",
       "**/sst-env.d.ts",
-      "**/__tests__/MAT.json"
+      "packages/core/src/utils/bibles/__tests__/MAT.json",
+      "apps/www/public/sw.js"
     ]
   },
   "formatter": {
