--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -20,6 +20,8 @@
     "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
     "tailwindcss": "^3.4.14",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "vite-plugin-pwa": "^0.20.5",
     "vinxi": "^0.4.3"
@@ -68,10 +70,7 @@
     "solid-js": "^1.9.3",
     "solid-marked": "^0.6.3",
     "solid-sonner": "^0.2.8",
-    "solid-transition-group": "^0.2.3",
-    "tailwind-merge": "^2.5.4",
-    "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.4"
   },
   "engines": {
     "node": ">=18",
