--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "Bundler",
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vinxi/types/client"],
+    "types": ["vinxi/types/client", "vite-plugin-pwa/solid"],
     "verbatimModuleSyntax": false,
     "isolatedModules": true,
     "baseUrl": "./",
