fix: use sst container solution since fly sucked

--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -40,3 +40,6 @@ jobs:
       - name: Remove
         run: |
           bun run remove
+
+      - name: CI Cleanup
+        uses: ./.github/actions/ci-cleanup
