--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -110,3 +110,6 @@ jobs:
                 body: `Preview URL: ${{ steps.extract_website_url.outputs.website_url }}`,
               });
             }
+
+      - name: CI Cleanup
+        uses: ./.github/actions/ci-cleanup
