--- a/.github/workflows/sst-remove.yml
+++ b/.github/workflows/sst-remove.yml
@@ -42,3 +42,6 @@ jobs:
       - name: Remove
         run: |
           bun run remove
+
+      - name: CI Cleanup
+        uses: ./.github/actions/ci-cleanup
