--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -69,3 +69,6 @@ jobs:
       - name: Run E2E tests
         run: |
           bun run test:e2e
+      
+      - name: CI Cleanup
+        uses: ./.github/actions/ci-cleanup
