--- a/.github/actions/ci-cleanup/action.yml
+++ b/.github/actions/ci-cleanup/action.yml
@@ -9,3 +9,4 @@ runs:
       run: |
         rm -rf /tmp/.buildx-cache
         mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      continue-on-error: true
