--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -16,15 +16,17 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "@vite-pwa/assets-generator": "^0.2.6",
     "autoprefixer": "^10.4.20",
+    "nitropack": "^2.10.4",
     "postcss": "^8.4.49",
     "sharp": "^0.33.5",
     "solid-devtools": "^0.30.1",
-    "tailwindcss": "^3.4.15",
     "tailwind-variants": "^0.3.0",
+    "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
-    "vite-plugin-pwa": "^0.21.0",
-    "vinxi": "^0.4.3"
+    "vinxi": "^0.4.3",
+    "vite": "^5.4.11",
+    "vite-plugin-pwa": "^0.21.0"
   },
   "dependencies": {
     "@ai-sdk/solid": "^0.0.54",
