--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -10,6 +10,8 @@ concurrency: pr-${{ github.event.pull_request.number }}
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  FLY_ORG: ${{ vars.FLY_ORG }}
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   TURSO_ORG: ${{ vars.TURSO_ORG }}
   TURSO_API_TOKEN: ${{ secrets.TURSO_API_KEY }}
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
@@ -27,7 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: CI setup
+      - name: CI Setup
         uses: ./.github/actions/ci-setup
 
       - name: Set SST Stage
