--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.0.1",
     "@ai-sdk/groq": "^1.0.1",
+    "@ai-sdk/mistral": "^1.0.2",
     "@ai-sdk/openai": "^1.0.2",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
