--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -24,8 +24,11 @@
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
-    "vinxi": "^0.4.3",
-    "vite-plugin-pwa": "^0.21.1"
+    "vinxi": "^0.5.0",
+    "vite": "^6.0.2",
+    "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-solid": "^2.11.0",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
     "@ai-sdk/solid": "^1.0.3",
@@ -38,7 +41,7 @@
     "@kobalte/core": "^0.13.7",
     "@modular-forms/solid": "0.25.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/solidstart": "^8.41.0",
+    "@sentry/solidstart": "^8.42.0",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
     "@solid-primitives/intersection-observer": "^2.1.6",
@@ -62,7 +65,7 @@
     "embla-carousel-solid": "^8.5.1",
     "hono": "^4.6.12",
     "lucide-solid": "^0.462.0",
-    "posthog-js": "^1.194.1",
+    "posthog-js": "^1.194.2",
     "posthog-node": "^4.3.1",
     "solid-js": "^1.9.3",
     "solid-marked": "^0.6.3",
