chore: update tsconfig.json files across packages to correct include paths for improved module resolution

--- a/packages/schemas/tsconfig.json
+++ b/packages/schemas/tsconfig.json
@@ -19,6 +19,6 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["globals.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["../core/globals.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
