--- a/packages/ai/tsconfig.json
+++ b/packages/ai/tsconfig.json
@@ -19,6 +19,6 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["../core/globals.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
