--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@sentry/node": "^8.42.0",
     "@theaistudybible/schemas": "workspace:*",
+    "ohash": "^1.1.4",
     "sentry-integration-libsql-client": "^1.3.0"
   }
 }
