--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,11 +13,14 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "@noble/hashes": "^1.6.1",
+    "@oslojs/binary": "^1.0.0",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/webauthn": "^1.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sentry/node": "^8.42.0",
     "@theaistudybible/schemas": "workspace:*",
     "ohash": "^1.1.4",
+    "oslo": "^1.2.1",
     "sentry-integration-libsql-client": "^1.3.0"
   }
 }
