chore: update package dependencies and implement caching middleware; bump versions for @upstash/ratelimit, vite, and ai-sdk packages to enhance performance and functionality, and add caching middleware for improved response handling in AI chat functionality

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -25,13 +25,13 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "vinxi": "^0.5.1",
-    "vite": "^6.0.2",
+    "vite": "^6.0.3",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-solid": "^2.11.0",
     "vitest": "^2.1.8"
   },
   "dependencies": {
-    "@ai-sdk/solid": "^1.0.4",
+    "@ai-sdk/solid": "^1.0.5",
     "@corvu/drawer": "^0.2.2",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
@@ -58,14 +58,15 @@
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
+    "@upstash/ratelimit": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.0",
     "cropperjs": "^1.6.2",
     "embla-carousel-solid": "^8.5.1",
     "hono": "^4.6.12",
-    "lucide-solid": "^0.467.0",
-    "posthog-js": "^1.194.3",
+    "lucide-solid": "^0.468.0",
+    "posthog-js": "^1.194.4",
     "posthog-node": "^4.3.1",
     "solid-js": "^1.9.3",
     "solid-marked": "^0.6.3",
