chore: update package dependencies and bun.lockb; bump versions for drizzle-kit, drizzle-orm, drizzle-zod, sst, and zod for improved performance and compatibility; enhance tsconfig configurations across multiple apps and packages to include necessary type definitions

--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@theaistudybible/tsconfig",
   "compilerOptions": {
+    "types": ["@types/node"],
     "baseUrl": "./",
     "paths": {
       "@/functions": ["./src"],
