--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^22.10.1",
     "cypress": "^13.16.1",
     "cypress-wait-until": "^3.0.2",
-    "drizzle-kit": "^0.29.1",
+    "drizzle-kit": "^0.30.0",
     "husky": "^9.1.7",
     "rimraf": "^6.0.1",
     "turbo": "^2.3.3",
@@ -58,12 +58,12 @@
     "@upstash/redis": "^1.34.3",
     "ai": "^4.0.13",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.37.0",
-    "drizzle-zod": "^0.5.1",
+    "drizzle-orm": "^0.38.0",
+    "drizzle-zod": "0.5.1",
     "lucia": "^3.2.2",
-    "sst": "3.3.59",
+    "sst": "3.3.64",
     "stripe": "^17.4.0",
-    "zod": "^3.23.8"
+    "zod": "^3.24.0"
   },
   "packageManager": "bun@1.1.37",
   "workspaces": ["apps/*", "packages/*", "tools/*"],
