--- a/apps/www/ui.config.json
+++ b/apps/www/ui.config.json
@@ -3,7 +3,7 @@
   "tsx": true,
   "tailwind": {
     "css": "src/app.css",
-    "config": "tailwind.config.js",
+    "config": "tailwind.config.ts",
     "prefix": ""
   },
   "aliases": {
