feat: implement email notification system; add email queue management for daily devotion and dead-letter events; create email templates for various notifications including password resets and daily devotion updates; enhance user settings schema to support email notifications; update TypeScript configurations across multiple packages to include email paths

--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -12,6 +12,8 @@
       "@/core/*": ["../../packages/core/src/*"],
       "@/ai": ["../../packages/ai/src"],
       "@/ai/*": ["../../packages/ai/src/*"],
+      "@/email": ["../../packages/email/src"],
+      "@/email/*": ["../../packages/email/src/*"],
       "@/www": ["../www/src"],
       "@/www/*": ["../www/src/*"],
       "@/workers": ["../workers/src"],
