--- a/apps/workers/tsconfig.json
+++ b/apps/workers/tsconfig.json
@@ -16,6 +16,8 @@
       "@/core/*": ["../../packages/core/src/*"],
       "@/ai": ["../../packages/ai/src"],
       "@/ai/*": ["../../packages/ai/src/*"],
+      "@/email": ["../../packages/email/src"],
+      "@/email/*": ["../../packages/email/src/*"],
       "@/www": ["../www/src"],
       "@/www/*": ["../www/src/*"],
       "@/functions": ["../functions/src"],
