chore: update package dependencies and bun.lockb; bump versions for drizzle-kit, ai, sst, and @sentry packages for improved performance and compatibility; enhance chat and markdown components with new animated features and user settings management

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -19,13 +19,14 @@
     "nitropack": "^2.10.4",
     "postcss": "^8.4.49",
     "sharp": "^0.33.5",
-    "solid-devtools": "^0.31.0",
+    "solid-devtools": "^0.31.1",
     "tailwind-variants": "^0.3.0",
     "tailwindcss": "^3.4.16",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "vinxi": "^0.5.1",
     "vite": "^6.0.3",
+    "vite-plugin-cjs-interop": "^2.1.6",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-solid": "^2.11.0",
     "vitest": "^2.1.8"
@@ -36,12 +37,12 @@
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/goldman": "^5.1.0",
     "@formkit/auto-animate": "^0.8.2",
-    "@hono/zod-validator": "^0.4.1",
+    "@hono/zod-validator": "^0.4.2",
     "@internationalized/date": "^3.6.0",
     "@kobalte/core": "^0.13.7",
     "@modular-forms/solid": "0.25.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/solidstart": "^8.44.0",
+    "@sentry/solidstart": "^8.45.0",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
     "@solid-primitives/intersection-observer": "^2.1.6",
@@ -52,7 +53,7 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.2",
     "@solidjs/start": "^1.0.10",
-    "@stripe/stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^5.3.0",
     "@tanstack/solid-query": "^5.62.7",
     "@tanstack/solid-query-devtools": "^5.62.7",
     "@theaistudybible/ai": "workspace:*",
@@ -66,11 +67,11 @@
     "embla-carousel-solid": "^8.5.1",
     "hono": "^4.6.13",
     "lucide-solid": "^0.468.0",
-    "motion": "^11.14.1",
-    "posthog-js": "^1.198.0",
+    "motion": "^11.14.4",
+    "posthog-js": "^1.200.0",
     "posthog-node": "^4.3.2",
     "solid-js": "^1.9.3",
-    "solid-marked": "^0.6.3",
+    "solid-markdown": "^2.0.14",
     "solid-sonner": "^0.2.8",
     "tailwind-merge": "^2.5.5"
   },
