--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "search.exclude": {
     "**/.sst": true
   },
+  "files.associations": {
+    "**/www/src/app.css": "tailwindcss"
+  },
   "cSpell.words": [
     "autocorrect",
     "autofocus",
@@ -58,6 +61,9 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[css]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[tailwindcss]": {
     "editor.defaultFormatter": "biomejs.biome"
   }
 }
