feat: implement push notification system and enhance user settings
- Introduced a new push notification system, allowing users to subscribe and receive notifications for updates and messages.
- Added `VapidPublicKey` and `VapidPrivateKey` to the environment for web push notifications.
- Created a `PushNotificationToggle` component for users to manage their notification preferences in the SettingsCard.
- Updated the database schema to include a `push_subscriptions` table for storing user subscription details.
- Enhanced the admin interface with a new Push Notification page for sending notifications to users.
- Refactored the daily devotion job to include push notifications alongside email notifications, improving user engagement.

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -29,7 +29,12 @@
     "vite-plugin-cjs-interop": "^2.1.6",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-solid": "^2.11.0",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "workbox-build": "^7.3.0",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "dependencies": {
     "@ai-sdk/solid": "^1.0.6",
