--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -6,9 +6,17 @@
     "moduleResolution": "Bundler",
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["@types/bun", "vinxi/types/client", "vite-plugin-pwa/solid"],
     "verbatimModuleSyntax": false,
     "isolatedModules": true,
+    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM", "DOM.Iterable", "WebWorker"],
+    "types": [
+      "@types/bun",
+      "vinxi/types/client",
+      "@solidjs/start/env",
+      "@solidjs/start/server",
+      "vite-plugin-pwa/info",
+      "vite-plugin-pwa/solid"
+    ],
     "baseUrl": "./",
     "paths": {
       "@/www": ["./src"],
