fix: update caching keys in CI setup for architecture compatibility
- Modified caching keys in the CI setup to include the runner architecture, ensuring better cache management for both x86 and ARM environments.
- Updated restore keys accordingly to maintain compatibility across different architectures.

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -13,17 +13,17 @@ runs:
       uses: actions/cache@v4
       with:
         path: .turbo
-        key: ${{ runner.os }}-turbo-${{ github.sha }}
+        key: ${{ runner.os }}-${{ runner.arch }}-turbo-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-turbo-
+          ${{ runner.os }}-${{ runner.arch }}-turbo-
 
     - name: Cache Docker Buildx from SST
       uses: actions/cache@v4
       with:
         path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        key: ${{ runner.os }}-${{ runner.arch }}-buildx-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-
+          ${{ runner.os }}-${{ runner.arch }}-buildx-
 
     - name: Install dependencies
       shell: bash
