feat: update package dependencies and enhance SST configuration [ci skip]
- Upgraded various dependencies in package.json files, including AWS SDK packages, Sentry, and AI SDKs for improved performance and security.
- Added multiple WebAppBucket resources in sst-env.d.ts for better infrastructure management.
- Introduced a new Sentry plugin in apps/functions/plugins.mjs for enhanced error tracking.
- Modified sst.config.ts to include production protection and updated environment variables for Sentry integration.
- Updated bun.lockb to reflect the changes in dependencies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,11 @@
     "openai",
     "Posthog",
     "precache",
+    "pulumi",
     "Ratelimit",
     "Ruleset",
+    "solidrouter",
+    "solidstart",
     "tailwindcss",
     "theaistudybible",
     "turso",
