--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -8,7 +8,8 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@sentry/aws-serverless": "^8.47.0",
+    "@sentry/aws-serverless": "^8.48.0",
+    "@sentry/esbuild-plugin": "^2.22.7",
     "posthog-node": "^4.3.2",
     "@theaistudybible/tsconfig": "workspace:*"
   },
