--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/aws-lambda": "^8.10.147",
-    "@types/bun": "^1.1.15",
+    "@types/bun": "^1.1.16",
     "@types/node": "^22.10.5",
     "@types/web-push": "^3.6.4",
     "cypress": "^13.17.0",
@@ -45,9 +45,10 @@
     "husky": "^9.1.7",
     "rimraf": "^6.0.1",
     "turbo": "^2.3.3",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "why-is-node-running": "^3.2.2"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.723.0",
@@ -57,12 +58,12 @@
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
-    "ai": "^4.0.29",
+    "ai": "^4.0.30",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "0.5.1",
     "lucia": "^3.2.2",
-    "sst": "3.4.32",
+    "sst": "3.5.4",
     "stripe": "^17.5.0",
     "web-push": "^3.6.7",
     "zod": "^3.24.1"
