--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -47,6 +47,7 @@
     "@kobalte/core": "^0.13.7",
     "@modular-forms/solid": "0.25.0",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@pilcrowjs/object-parser": "^0.0.4",
     "@sentry/solidstart": "^8.48.0",
     "@solid-primitives/clipboard": "^1.5.10",
     "@solid-primitives/context": "^0.2.3",
