--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,10 +15,12 @@
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@oslojs/binary": "^1.0.0",
     "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@oslojs/webauthn": "^1.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@sentry/node": "^8.48.0",
     "@theaistudybible/schemas": "workspace:*",
+    "arctic": "^3.1.1",
     "ohash": "^1.1.4",
     "oslo": "^1.2.1",
     "sentry-integration-libsql-client": "^1.3.0"
