chore: update package dependencies and enhance Apple/Google sign-in handling
- Upgraded AWS SDK packages and other dependencies across multiple projects for improved functionality and compatibility.
- Modified Apple and Google sign-in callback routes to use more descriptive cookie names for state management.
- Improved the handling of OAuth state in sign-in processes, enhancing clarity and consistency in user authentication flows.
- Updated bun.lockb to reflect the changes in dependencies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,8 @@
     "tailwindcss",
     "theaistudybible",
     "turso",
-    "upstash"
+    "upstash",
+    "vinxi"
   ],
   "editor.codeActionsOnSave": {
     "quickfix.biome": "explicit",
