--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.0.8",
+    "@ai-sdk/deepseek": "^0.0.4",
     "@ai-sdk/groq": "^1.0.11",
     "@ai-sdk/mistral": "^1.0.8",
     "@ai-sdk/openai": "^1.0.18",
