feat: integrate BrainTrust API and enhance environment configuration
- Added new constants for BrainTrust API key and project name in the environment definitions.
- Updated the AI package to include the BrainTrust dependency for improved functionality.
- Integrated BrainTrust logging in chat and devotion modules, utilizing the new constants for project name and API key.
- Refactored model initialization to conditionally wrap the AI SDK model based on the production environment.

These changes enhance the integration with BrainTrust, improving logging and configuration management across the application.

--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -19,6 +19,7 @@
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
     "@upstash/vector": "^1.2.0",
+    "braintrust": "^0.0.181",
     "openai": "^4.78.1",
     "tiktoken": "^1.0.18"
   }
