--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/aws-lambda": "^8.10.147",
-    "@types/bun": "^1.1.16",
+    "@types/bun": "^1.1.17",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.10.7",
     "@types/web-push": "^3.6.4",
-    "cypress": "^13.17.0",
+    "cypress": "^14.0.0",
     "cypress-wait-until": "^3.0.2",
     "drizzle-kit": "^0.30.2",
     "husky": "^9.1.7",
@@ -47,21 +48,22 @@
     "turbo": "^2.3.3",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.0",
+    "vitest": "^3.0.2",
     "why-is-node-running": "^3.2.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.729.0",
-    "@aws-sdk/client-ses": "^3.726.1",
-    "@aws-sdk/client-sqs": "^3.726.1",
-    "@aws-sdk/s3-request-presigner": "^3.729.0",
+    "@aws-sdk/client-s3": "^3.730.0",
+    "@aws-sdk/client-ses": "^3.730.0",
+    "@aws-sdk/client-sqs": "^3.730.0",
+    "@aws-sdk/s3-request-presigner": "^3.730.0",
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
-    "ai": "^4.0.39",
+    "ai": "^4.0.41",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "0.5.1",
+    "mime-types": "^2.1.35",
     "sst": "3.5.13",
     "stripe": "^17.5.0",
     "web-push": "^3.6.7",
