--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -53,10 +53,6 @@ jobs:
         run: |
           bun run lint
 
-      - name: Test
-        run: |
-          bun run test
-
       - name: Deploy
         run: |
           bun run deploy
@@ -68,6 +64,10 @@ jobs:
       - name: Seed DB
         run: |
           bun run db:seed
+
+      - name: Run tests
+        run: |
+          bun run test
 
       - name: Run E2E tests
         run: |
