--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -49,10 +49,6 @@ jobs:
         run: |
           bun run lint
 
-      - name: Test
-        run: |
-          bun run test
-
       - name: Deploy
         run: |
           bun run deploy
@@ -64,6 +60,10 @@ jobs:
       - name: Seed DB
         run: |
           bun run db:seed
+
+      - name: Run tests
+        run: |
+          bun run test
 
       - name: Run E2E tests
         run: |
