chore: update CI workflows to remove FLY configuration and set AWS region
- Removed FLY_ORG and FLY_API_TOKEN environment variables from multiple CI workflow files.
- Added AWS_REGION set to 'us-east-1' in the environment configuration for improved clarity and consistency.
- These changes streamline the deployment process by focusing on AWS configurations, enhancing maintainability of the workflows.

--- a/.github/workflows/sst-remove.yml
+++ b/.github/workflows/sst-remove.yml
@@ -12,8 +12,7 @@ concurrency: ${{ github.event.inputs.stage }}
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  FLY_ORG: ${{ vars.FLY_ORG }}
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  AWS_REGION: 'us-east-1'
   TURSO_ORG: ${{ vars.TURSO_ORG }}
   TURSO_API_TOKEN: ${{ secrets.TURSO_API_KEY }}
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
