--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -14,8 +14,7 @@ concurrency: pr-${{ github.event.pull_request.number }}
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  FLY_ORG: ${{ vars.FLY_ORG }}
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  AWS_REGION: 'us-east-1'
   TURSO_ORG: ${{ vars.TURSO_ORG }}
   TURSO_API_TOKEN: ${{ secrets.TURSO_API_KEY }}
   UPSTASH_EMAIL: ${{ vars.UPSTASH_EMAIL }}
