--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -62,6 +62,7 @@
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/solid-query": "^5.64.2",
     "@tanstack/solid-query-devtools": "^5.64.2",
+    "@tanstack/solid-table": "^8.20.5",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
