--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@aws-sdk/client-ses": "^3.731.1",
     "@aws-sdk/client-sqs": "^3.731.1",
     "@aws-sdk/s3-request-presigner": "^3.731.1",
+    "@langchain/community": "^0.3.26",
+    "@langchain/core": "^0.3.32",
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
@@ -62,6 +64,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "0.5.1",
+    "langchain": "^0.3.12",
     "sst": "3.5.15",
     "stripe": "^17.5.0",
     "web-push": "^3.6.7",
